<resources>
    <string name="app_name">RSSReader</string>
    <string name="facebook_app_id">1713959898897443</string>
    <string name="btn_fetch">FETCH</string>
    <string name="hint_source">RSS feed source</string>
    <string name="feed_title">Feed Title:</string>
    <string name="feed_description">Feed Description:</string>
    <string name="feed_link">Feed Link:</string>
    <string name="i_shr_title">Share on Facebook</string>
    <string name="i_del_title">Delete item from list</string>
</resources>
